[package]
name = "solana-account-proof"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = {workspace = true}
solana-sdk={workspace = true}
blake3={workspace=true}
rayon={worksapce=true}
rand={workspace=true}
solana-accounts-db={workspace=true}
solana-runtime={workspace=true}
anyhow={workspace=true}


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
